--- a/apim-analytics-server/package.json
+++ b/apim-analytics-server/package.json
@@ -4,10 +4,10 @@
   "description": "Async API Management Analytics Server",
   "scripts": {
     "build": "tsc",
-    "start": "rimraf ./dist && tsc && node ./dist/server.js",
-    "start:pretty": "rimraf ./dist && tsc && node ./dist/server.js | pino-pretty -o '{component} - {msg}' -i component",
+    "start": "rimraf ./dist && tsc && node ./dist/server.js | pino-pretty -o '{component} - {msg}' -i component",
     "dev": "TS_NODE=true NODE_OPTIONS=\"-r ts-node/register\" node ./src/server.ts | pino-pretty -o '{component} - {msg}' -i component",
-    "lint": "eslint -c .eslintrc.js \"{src, test}/**/*.{js,ts}\" --quiet"
+    "lint": "eslint -c .eslintrc.js \"{src, test}/**/*.{js,ts}\" --quiet",
+    "test:integration": "DOTENV_CONFIG_PATH=test/.env mocha --config test/integration/.mocharc.yml test/integration/integration.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -32,21 +32,30 @@
   },
   "devDependencies": {
     "@types/bree": "^7.1.0",
+    "@types/chai": "^4.3.0",
     "@types/express-requests-logger": "^3.0.1",
+    "@types/js-yaml": "^4.0.5",
+    "@types/mocha": "^9.1.0",
     "@types/ms": "^0.7.31",
     "@types/node": "^16.11.26",
     "@types/node-fetch": "^2.6.1",
     "@types/passport": "^1.0.7",
     "@types/passport-http": "^0.3.9",
+    "@types/shelljs": "^0.8.11",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "chai": "^4.3.6",
     "eslint": "^8.13.0",
+    "js-yaml": "^4.1.0",
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
+    "shelljs": "^0.8.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
   "dependencies": {
     "@ladjs/graceful": "^1.1.5",
+    "@solace-iot-team/apim-connector-openapi-node": "^0.7.6",
     "@types/express": "^4.17.13",
     "bree": "^8.0.2",
     "delay": "^5.0.0",
