use hostname and port for connector configuration

--- a/apim-analytics-server/devel/template.env
+++ b/apim-analytics-server/devel/template.env
@@ -9,8 +9,10 @@ AMAX_SERVER_LOGGER_LOG_LEVEL=debug
 # Name of the log file of the analytics server. If not set, logs are written to stdout.
 # AMAX_SERVER_LOGGER_LOG_FILE=tmp/logs/v16/server.log
 
-# Base URL of the API Management Connector
-AMAX_SERVER_CONNECTOR_URL=http:/localhost:9090/v1
+# Host of the API Management Connector
+AMAX_SERVER_CONNECTOR_HOST=localhost
+# Port of the API Management Connector
+AMAX_SERVER_CONNECTOR_PORT=9090
 # Username of the ORG admin of the API Management Connector
 AMAX_SERVER_CONNECTOR_USERNAME=admin
 # Password of the ORG admin of the API Management Connector
