--- a/apim-analytics-server/tsconfig.json
+++ b/apim-analytics-server/tsconfig.json
@@ -38,7 +38,8 @@
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "tools/**/*.ts",
   ],
   "exclude": [
     "dist",
