initial setup for releases

--- a/apim-analytics-server/tsconfig.json
+++ b/apim-analytics-server/tsconfig.json
@@ -38,8 +38,7 @@
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*.ts",
-    "tools/**/*.ts",
+    "src/**/*.ts"
   ],
   "exclude": [
     "dist",
