--- a/apim-analytics-server/package.json
+++ b/apim-analytics-server/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "description": "Async API Management Analytics Server",
   "scripts": {
-    "build": "tsc",
-    "start": "rimraf ./dist && tsc && node ./dist/src/server.js | pino-pretty -o '{component} - {msg}' -i component",
+    "build": "rimraf ./dist && tsc",
+    "build:production": "rimraf ./dist && tsc --declaration false --sourceMap false",
+    "start": "node ./dist/server.js | pino-pretty -o '{component} - {msg}' -i component",
     "dev": "TS_NODE=true NODE_OPTIONS=\"-r ts-node/register\" node ./src/server.ts | pino-pretty -o '{component} - {msg}' -i component",
     "lint": "eslint -c .eslintrc.js \"{src, test, tools}/**/*.{js,ts}\" --quiet",
     "test:integration": "DOTENV_CONFIG_PATH=test/.env mocha --config test/integration/.mocharc.yml test/integration/integration.spec.ts"
@@ -31,8 +32,8 @@
     "url": "https://github.com/solace-iot-team/async-apim-analytics/issues"
   },
   "devDependencies": {
-    "@types/bree": "^7.1.0",
     "@types/chai": "^4.3.0",
+    "@types/express": "^4.17.13",
     "@types/express-requests-logger": "^3.0.1",
     "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^9.1.0",
@@ -48,6 +49,7 @@
     "js-yaml": "^4.1.0",
     "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
+    "pino-pretty": "^7.6.1",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
     "ts-node": "^10.7.0",
@@ -56,7 +58,6 @@
   "dependencies": {
     "@ladjs/graceful": "^1.1.5",
     "@solace-iot-team/apim-connector-openapi-node": "^0.7.6",
-    "@types/express": "^4.17.13",
     "bree": "^8.0.2",
     "delay": "^5.0.0",
     "dotenv": "^16.0.0",
@@ -69,9 +70,7 @@
     "passport": "^0.5.2",
     "passport-http": "^0.3.0",
     "pino": "^7.10.0",
-    "pino-pretty": "^7.6.1",
     "prom-client": "^14.0.1",
-    "reflect-metadata": "^0.1.13",
     "tiny-typed-emitter": "^2.1.0"
   }
 }
