--- a/apim-analytics-server/package.json
+++ b/apim-analytics-server/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "description": "Async API Management Analytics Server",
   "scripts": {
-    "build": "rimraf ./dist && tsc",
-    "build:production": "rimraf ./dist && tsc --declaration false --sourceMap false",
-    "start": "DOTENV_CONFIG_PATH=devel/.env TS_NODE=true node -r ts-node/register ./src/server.ts",
+    "build": "rimraf ./dist && tsc && ts-node build.ts",
+    "build:production": "rimraf ./dist && tsc --declaration false --sourceMap false && ts-node build.ts",
+    "start": "scripts/start.sh",
     "start:watch": "nodemon",
-    "debug": "DOTENV_CONFIG_PATH=devel/.env TS_NODE=true node --inspect-brk -r ts-node/register ./src/server.ts",
+    "debug": "scripts/start.sh --debug",
     "lint": "eslint -c .eslintrc.js \"{src, test, tools}/**/*.{js,ts}\" --quiet",
-    "test:integration": "DOTENV_CONFIG_PATH=test/.env mocha --config test/integration/.mocharc.yml test/integration/integration.spec.ts"
+    "test:integration": "scripts/test.sh integration"
   },
   "repository": {
     "type": "git",
@@ -44,6 +44,8 @@
     "@types/passport": "^1.0.7",
     "@types/passport-http": "^0.3.9",
     "@types/shelljs": "^0.8.11",
+    "@types/sinon": "^10.0.11",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "chai": "^4.3.6",
     "eslint": "^8.13.0",
@@ -53,10 +55,13 @@
     "pino-pretty": "^7.6.1",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
+    "sinon": "^13.0.2",
+    "supertest": "^6.2.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@godaddy/terminus": "^4.10.2",
     "@ladjs/graceful": "^1.1.5",
     "@solace-iot-team/apim-connector-openapi-node": "^0.7.6",
     "bree": "^8.0.2",
