--- a/quickstart/template.env
+++ b/quickstart/template.env
@@ -1,25 +1,29 @@
 # Port of the analytics server
-AMAX_SERVER_PORT=8081
+AMAX_SERVER_PORT=8080
 # Username of the admin of the analytics server
 AMAX_SERVER_USERNAME=admin
 # Password of the admin of the analytics server
 AMAX_SERVER_PASSWORD=Solace123!
 # Log level of the analytics server
 AMAX_SERVER_LOGGER_LOG_LEVEL=debug
-
-# Port of the API Management Connector
-AMAX_SERVER_CONNECTOR_PORT=8080
-# Username of the ORG admin of the API Management Connector
-AMAX_SERVER_CONNECTOR_USERNAME=admin
-# Password of the ORG admin of the API Management Connector
-AMAX_SERVER_CONNECTOR_PASSWORD=Solace123!
-
-# Base URL of the Solace Cloud API
-AMAX_SERVER_SOLACE_CLOUD_URL=https://api.solace.cloud/api/v0
-# Token with read access to the Solace Cloud API
-AMAX_SERVER_SOLACE_CLOUD_TOKEN={solace-cloud-token}
-# Service ID of Solace Cloud service to use
-AMAX_SERVER_SOLACE_SERVICE_ID=1i5g7tif6z8n
-
 # Comma-separated list of organizations to watch
 AMAX_SERVER_ORGANIZATIONS=organization1
+
+# Host of the API Management Connector
+AMAX_CONNECTOR_HOST=host.docker.internal
+# Port of the API Management Connector
+AMAX_CONNECTOR_PORT=8081
+# Username of the platform and ORG admin of the API Management Connector
+AMAX_CONNECTOR_USERNAME=admin
+# Password of the platform and ORG admin of the API Management Connector
+AMAX_CONNECTOR_PASSWORD=Solace123!
+
+# Base URL of Solace's Cloud REST API
+AMAX_SOLACE_CLOUD_URL=https://api.solace.cloud/api/v0
+# API token with read access to Solace's Cloud REST API
+AMAX_SOLACE_CLOUD_TOKEN={solace-cloud-token}
+# Service ID of Solace Cloud service to use
+AMAX_SOLACE_SERVICE_ID={solace-service-id}
+
+# Port of Grafana
+AMAX_GRAFANA_PORT=8084
