restructure development setup and include prometheus and grafana

--- a/apim-analytics-server/devel/template.env
+++ b/apim-analytics-server/devel/template.env
@@ -1,5 +1,5 @@
 # Port of the analytics server
-AMAX_SERVER_PORT=8081
+AMAX_SERVER_PORT=8080
 # Username of the admin of the analytics server
 AMAX_SERVER_USERNAME=admin
 # Password of the admin of the analytics server
@@ -8,11 +8,13 @@ AMAX_SERVER_PASSWORD=Solace123!
 AMAX_SERVER_LOGGER_LOG_LEVEL=debug
 # Name of the log file of the analytics server. If not set, logs are written to stdout.
 # AMAX_SERVER_LOGGER_LOG_FILE=tmp/logs/v16/server.log
+# Comma-separated list of organizations to analyse
+AMAX_SERVER_ORGANIZATIONS=organization1,organization2
 
 # Host of the API Management Connector
 AMAX_SERVER_CONNECTOR_HOST=localhost
 # Port of the API Management Connector
-AMAX_SERVER_CONNECTOR_PORT=8080
+AMAX_SERVER_CONNECTOR_PORT=8081
 # Username of the ORG admin of the API Management Connector
 AMAX_SERVER_CONNECTOR_USERNAME=admin
 # Password of the ORG admin of the API Management Connector
@@ -23,5 +25,7 @@ AMAX_SERVER_SOLACE_CLOUD_URL=https://api.solace.cloud/api/v0
 # Token with read access to the Solace Cloud API
 AMAX_SERVER_SOLACE_CLOUD_TOKEN={solace-cloud-token}
 
-# Comma-separated list of organizations to analyse
-AMAX_SERVER_ORGANIZATIONS=organization1,organization2
+# Port of Grafana
+AMAX_PROMETHEUS_PORT=8083
+# Port of Grafana
+AMAX_GRAFANA_PORT=8084
