--- a/quickstart/docker-compose/docker-compose.yml
+++ b/quickstart/docker-compose/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     profiles:
       - all-in-one
   apim-analytics-server:
-    image: apim-analytics-server:latest
+    image: solaceiotteam/apim-analytics-server:latest
     ports:
       - ${AMAX_SERVER_PORT:-8080}:3000
     healthcheck:
