--- a/apim-analytics-tools/package.json
+++ b/apim-analytics-tools/package.json
@@ -39,6 +39,7 @@
     "@types/shelljs": "^0.8.11",
     "@types/sinon": "^10.0.11",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "chai": "^4.3.6",
     "eslint": "^8.13.0",
@@ -56,6 +57,7 @@
     "js-yaml": "^4.1.0",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.7",
-    "solclientjs": "^10.10.0"
+    "solclientjs": "^10.10.0",
+    "uuid": "^8.3.2"
   }
 }
