add organizations api and database for configuration

--- a/apim-analytics-server/tsconfig.json
+++ b/apim-analytics-server/tsconfig.json
@@ -10,10 +10,11 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "typeRoots": [
-      "./node_modules/@types"
+      "./node_modules/@types",
+      "./src/@types"
     ],
     "types": [
-      "node"
+      "node", "api"
     ],
     "resolveJsonModule": true,
     /* Emit */
