--- a/apim-analytics-server/package.json
+++ b/apim-analytics-server/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Async API Management Analytics Server",
   "scripts": {
+    "gen:apitypes": "dtsgen -o src/@types/api/index.d.ts src/common/api.yml",
     "build": "rimraf ./dist && tsc && ts-node build.ts",
     "build:production": "rimraf ./dist && tsc --declaration false --sourceMap false && ts-node build.ts",
     "start": "scripts/start.sh",
@@ -48,6 +49,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "chai": "^4.3.6",
+    "dtsgenerator": "^3.15.1",
     "eslint": "^8.13.0",
     "js-yaml": "^4.1.0",
     "mocha": "^9.2.2",
@@ -68,8 +70,10 @@
     "delay": "^5.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-openapi-validator": "^4.13.7",
     "express-requests-logger": "^3.0.4",
     "fetch-with-proxy": "^3.0.1",
+    "mongodb": "^4.5.0",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.7",
     "node-ts-cache-storage-memory": "^4.4.0",
