--- a/apim-analytics-server/devel/template.env
+++ b/apim-analytics-server/devel/template.env
@@ -8,8 +8,11 @@ AMAX_SERVER_PASSWORD=Solace123!
 AMAX_SERVER_LOGGER_LOG_LEVEL=debug
 # Name of the log file of the analytics server. If not set, logs are written to stdout.
 # AMAX_SERVER_LOGGER_LOG_FILE=tmp/logs/v16/server.log
-# Comma-separated list of organizations to analyse
-AMAX_SERVER_ORGANIZATIONS=organization1,organization2
+
+# Port for MongoDB
+AMAX_SERVER_MONGODB_PORT=27017
+# Connection string URI for MongoDB
+AMAX_SERVER_MONGODB_URL=mongodb://localhost:27017
 
 # Host of the API Management Connector
 AMAX_SERVER_CONNECTOR_HOST=localhost
@@ -20,12 +23,13 @@ AMAX_SERVER_CONNECTOR_USERNAME=admin
 # Password of the ORG admin of the API Management Connector
 AMAX_SERVER_CONNECTOR_PASSWORD=Solace123!
 
-# Base URL of the Solace Cloud API
-AMAX_SERVER_SOLACE_CLOUD_URL=https://api.solace.cloud/api/v0
-# Token with read access to the Solace Cloud API
-AMAX_SERVER_SOLACE_CLOUD_TOKEN={solace-cloud-token}
-
 # Port of Grafana
 AMAX_PROMETHEUS_PORT=8083
 # Port of Grafana
 AMAX_GRAFANA_PORT=8084
+
+# The following variables are required only if you wanna use the pre-configured
+# API Management Connector that is installed with the "standard" profile
+
+# API token for Solace's Cloud REST API used in the API Management Connector
+AMAX_SOLACE_CLOUD_TOKEN={solace-cloud-token}
