--- a/quickstart/template.env
+++ b/quickstart/template.env
@@ -6,8 +6,6 @@ AMAX_SERVER_USERNAME=admin
 AMAX_SERVER_PASSWORD=Solace123!
 # Log level of the analytics server
 AMAX_SERVER_LOGGER_LOG_LEVEL=debug
-# Comma-separated list of organizations to watch
-AMAX_SERVER_ORGANIZATIONS=organization1
 
 # Host of the API Management Connector
 AMAX_CONNECTOR_HOST=host.docker.internal
@@ -18,12 +16,17 @@ AMAX_CONNECTOR_USERNAME=admin
 # Password of the platform and ORG admin of the API Management Connector
 AMAX_CONNECTOR_PASSWORD=Solace123!
 
-# Base URL of Solace's Cloud REST API
-AMAX_SOLACE_CLOUD_URL=https://api.solace.cloud/api/v0
-# API token with read access to Solace's Cloud REST API
-AMAX_SOLACE_CLOUD_TOKEN={solace-cloud-token}
-# Service ID of Solace Cloud service to use
-AMAX_SOLACE_SERVICE_ID={solace-service-id}
-
 # Port of Grafana
 AMAX_GRAFANA_PORT=8084
+
+# Comma-separated list of organizations for which analytics should be enabled
+# when the analytics server is bootstrapped
+AMAX_ORGANIZATIONS=organization1
+
+# The following variables are required only if you wanna use the pre-configured
+# API Management Connector that is installed with the "all-in-one" profile
+
+# API token for Solace's Cloud REST API used in the API Management Connector
+AMAX_SOLACE_CLOUD_TOKEN={solace-cloud-token}
+# Service ID of Solace Cloud service used in the API Management Connector
+AMAX_SOLACE_SERVICE_ID={solace-service-id}
