update integration tests

--- a/apim-analytics-server/test/template.env
+++ b/apim-analytics-server/test/template.env
@@ -9,6 +9,11 @@ AMAX_SERVER_LOGGER_LOG_LEVEL=debug
 # Name of the log file of the analytics server. If not set, logs are written to stdout.
 AMAX_SERVER_LOGGER_LOG_FILE=tmp/logs/v16/server.log
 
+# Port for MongoDB
+AMAX_SERVER_MONGODB_PORT=27017
+# Connection string URI for MongoDB
+AMAX_SERVER_MONGODB_URL=mongodb://localhost:27017
+
 # Host of the API Management Connector
 AMAX_SERVER_CONNECTOR_HOST=localhost
 # Port of the API Management Connector
@@ -22,6 +27,3 @@ AMAX_SERVER_CONNECTOR_PASSWORD=Solace123!
 AMAX_SERVER_SOLACE_CLOUD_URL=https://api.solace.cloud/api/v0
 # Token with read access to the Solace Cloud API
 AMAX_SERVER_SOLACE_CLOUD_TOKEN={solace-cloud-token}
-
-# Comma-separated list of organizations to analyse
-AMAX_SERVER_ORGANIZATIONS=organization1
