--- a/apim-analytics-server/package.json
+++ b/apim-analytics-server/package.json
@@ -48,12 +48,14 @@
     "@types/sinon": "^10.0.11",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "abort-controller": "^3.0.0",
     "chai": "^4.3.6",
     "dtsgenerator": "^3.15.1",
     "eslint": "^8.13.0",
     "js-yaml": "^4.1.0",
     "mocha": "^9.2.2",
     "nodemon": "^2.0.15",
+    "openapi-typescript-codegen": "^0.19.0",
     "pino-pretty": "^7.6.1",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
