--- a/apim-analytics-server/test/template.env
+++ b/apim-analytics-server/test/template.env
@@ -1,5 +1,5 @@
 # Port of the analytics server
-AMAX_SERVER_PORT=8091
+AMAX_SERVER_PORT=8098
 # Username of the admin of the analytics server
 AMAX_SERVER_USERNAME=admin
 # Password of the admin of the analytics server
@@ -17,13 +17,15 @@ AMAX_SERVER_MONGODB_URL=mongodb://localhost:27017
 # Host of the API Management Connector
 AMAX_SERVER_CONNECTOR_HOST=localhost
 # Port of the API Management Connector
-AMAX_SERVER_CONNECTOR_PORT=8090
+AMAX_SERVER_CONNECTOR_PORT=8092
 # Username of the ORG admin of the API Management Connector
 AMAX_SERVER_CONNECTOR_USERNAME=admin
 # Password of the ORG admin of the API Management Connector
 AMAX_SERVER_CONNECTOR_PASSWORD=Solace123!
 
-# Base URL of the Solace Cloud API
-AMAX_SERVER_SOLACE_CLOUD_URL=https://api.solace.cloud/api/v0
-# Token with read access to the Solace Cloud API
-AMAX_SERVER_SOLACE_CLOUD_TOKEN={solace-cloud-token}
+# API token for Solace's Cloud REST API
+AMAX_SOLACE_CLOUD_TOKEN={solace-cloud-token}
+# Service ID of Solace Cloud service #1
+AMAX_SOLACE_CLOUD_SERVICE_ID_1={solace-cloud-service-id_1}
+# Service ID of Solace Cloud service #2
+AMAX_SOLACE_CLOUD_SERVICE_ID_2={solace-cloud-service-id_2}
