use version 0.3.7 of connector docker image

--- a/apim-analytics-server/test/resources/apim-connector/docker-compose.yml
+++ b/apim-analytics-server/test/resources/apim-connector/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - mongodb-data:/data/db
     restart: unless-stopped
   apim-connector:
-    image: solaceiotteam/apim-connector-server:latest
+    image: solaceiotteam/apim-connector-server:0.3.7
     ports:
       - ${AMAX_SERVER_CONNECTOR_PORT:-8092}:3000
     volumes:
