--- a/quickstart/docker-compose/docker-compose.yml
+++ b/quickstart/docker-compose/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - mongodb-data:/data/db
     restart: unless-stopped
   apim-connector:
-    image: solaceiotteam/apim-connector-server:latest
+    image: solaceiotteam/apim-connector-server:0.3.8
     ports:
       - ${AMAX_CONNECTOR_PORT:-8082}:3000
     healthcheck:
@@ -67,7 +67,7 @@ services:
     depends_on:
       - apim-analytics
   grafana:
-    image: grafana/grafana-oss:8.5.1
+    image: grafana/grafana-oss:8.5.2
     ports:
       - ${AMAX_GRAFANA_PORT:-8084}:3000
     volumes:
