--- a/quickstart/docker-compose/docker-volumes/grafana/dashboards/solace/application-statistics.json
+++ b/quickstart/docker-compose/docker-volumes/grafana/dashboards/solace/application-statistics.json
@@ -168,7 +168,8 @@
                 "value": null
               }
             ]
-          }
+          },
+          "unit": "short"
         },
         "overrides": []
       },
@@ -240,7 +241,8 @@
                 "value": null
               }
             ]
-          }
+          },
+          "unit": "short"
         },
         "overrides": []
       },
@@ -312,7 +314,8 @@
                 "value": null
               }
             ]
-          }
+          },
+          "unit": "short"
         },
         "overrides": []
       },
@@ -2149,6 +2152,6 @@
   "timezone": "",
   "title": "AsyncAPI Analytics: Application Statistics",
   "uid": "36017999-2a47-4c2b-8a11-7a5ef622d074",
-  "version": 1,
+  "version": 2,
   "weekStart": ""
 }
