--- a/apim-analytics-server/package.json
+++ b/apim-analytics-server/package.json
@@ -68,15 +68,13 @@
     "@godaddy/terminus": "^4.10.2",
     "@ladjs/graceful": "^1.1.5",
     "@solace-iot-team/apim-connector-openapi-node": "^0.7.6",
-    "bree": "^8.0.2",
-    "delay": "^5.0.0",
+    "async-mutex": "^0.3.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-openapi-validator": "^4.13.7",
     "express-requests-logger": "^3.0.4",
     "fetch-with-proxy": "^3.0.1",
     "mongodb": "^4.5.0",
-    "ms": "^2.1.3",
     "node-fetch": "^2.6.7",
     "node-ts-cache-storage-memory": "^4.4.0",
     "passport": "^0.5.2",
